# WebSiteLinkChecker

./: .gitignore  CHANGELOG.md  README.md  VERIFICATION_REPORT_10_LINKS.md  pyproject.toml  requirements.txt
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/scripts/powershell/: common.ps1  debug_print_paths.ps1  debug_runner.ps1  get_repo_root.ps1
reports/: bench_entie_on.csv  report.xlsx  report_progress_test.xlsx  report_quick.csv  report_quick.xlsx  report_schema_check.csv  report_test.xlsx
specs/002-realtime-progress/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-realtime-progress/checklists/: requirements.md
specs/002-realtime-progress/contracts/: cli.md
specs/1-link-check/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-link-check/checklists/: requirements.md
specs/1-link-check/contracts/: cli.md
src/: link_checker.py
src/lib/: config.py  fetcher.py  parser.py  playwright_adapter.py  progress.py  reporter.py
tests/: test_config.py  test_logging.py  test_parser.py  test_progress.py
